--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
 <HTML>
 <HEAD>
-<TITLE>Michael Ehrig, Sydney Mathematics &amp;amp; Statistics</TITLE>
-<link rel="stylesheet" href="http://www.maths.usyd.edu.au/Steely.css" type="text/css">
+<TITLE>Michael Ehrig, Beijing Institute of Technology</TITLE>
 <style>
 H2 {
   background-color: transparent;
