--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <HTML>
 <HEAD>
 <TITLE>Michael Ehrig, Beijing Institute of Technology</TITLE>
+<link rel="stylesheet" href="./Steely.css" type="text/css">
 <style>
 H2 {
   background-color: transparent;
