--- a/index.html
+++ b/index.html
@@ -1,58 +1,73 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
-<HTML>
-<HEAD>
-<TITLE>Michael Ehrig, Beijing Institute of Technology</TITLE>
-<link rel="stylesheet" href="./Steely.css" type="text/css">
-<style>
-H2 {
-  background-color: transparent;
-  margin-bottom: 0px;
-  margin-top: 0px;
-  padding-bottom: 0;
-}
-table#t02 table {
-    border=1;
-}
-table#t02 th {
-    padding: 5px;
-    border=0;
-}
-table#t02 td {
-    padding: 5px;
-    border=0;
-    background-color: #EDEDED;
-}
-table#t01 table {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-table#t01 th {
-    padding: 5px;
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-table#t01 td {
-    padding: 5px;
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-table#t01 {
-    width: 60%;    
-    background-color: #0000ff;
-}
-table#t01 th {
-    text-align: center;
-}
-a:link {
-    background-color: transparent;
-}
-</style>
-</HEAD>
-<BODY>
+<html lang="en">
 
-<H1>Michael Ehrig</H1>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="description" content="Michael Ehrig, Website">
+    <meta name="author" content="Michael Ehrig">
 
-<P>
+    <title>Michael Ehrig -- Home</title>
+
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- ? Bootstrap ?? CSS ?? -->
+    <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css">
+
+    <!-- ???Bootstrap???????????? -->
+    <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">
+
+    <!-- Custom styles for this template -->
+    <link href="navbar.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="sticky-footer-navbar.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
+<!-- The #page-top ID is part of the scrolling feature - the data-spy and data-target are part of the built-in Bootstrap scrollspy function -->
+
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+
+    <!-- Static navbar -->
+    <nav class="navbar navbar-default" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">@</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="publication.html">Research</a></li>
+                    <li><a href="teaching.html">Teaching</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <form class="navbar-form" role="search" action="http://www.bing.com/search"
+                          method="GET"
+                          target="_blank">
+                        <div class="form-group">
+                            <input type="text" name="q" class="form-control" id="content"  placeholder="Keyword">
+                        </div>
+                        <button type="submit" name="sitesearch"
+                                value="michaelehrig.github.io"  class="btn btn-default">Search</button>
+                    </form>
+                </ul>
+            </div><!--/.nav-collapse -->
+        </div><!--/.container-fluid -->
+    </nav>
+
 
 <TABLE id="t02" WIDTH="1000" >
 <TR ALIGN=LEFT VALIGN=TOP>
