--- a/index.html
+++ b/index.html
@@ -65,73 +65,6 @@
     </nav>
 
 
-<TABLE id="t02" WIDTH="1000" >
-<TR ALIGN=LEFT VALIGN=TOP>
-<TD WIDTH="200">
-<IMG SRC="./Foto.jpg" WIDTH="190" BORDER=0 STYLE="float:left; margin:0px 20px 20px 0px" ALT="Penrose tiling">
-<P>
-</TD>
-<TD WIDTH="600">
-<b>About me</b><br><br>
+</body>
 
-I am a Research Fellow in the <A HREF="http://www.maths.usyd.edu.au/res/Algebra.html">Algebra Research Group</A> of the <A HREF="/">School of Mathematics and Statistics</A> at the <A HREF="http://sydney.edu.au/">University of Sydney</A>, since August 2016.<br><br>
-
-In the first semesters of 2015 and 2016, I was an instructor at the University of Cologne, while in the second semester of 2015, I was a temporary professor at the University of Bonn.<br><br>
-
-From May 2009 to April 2015, I was a research fellow at the University of Bonn.<br><br>
-
-I received my PhD in October 2008 from the University of Cologne. My PhD advisor was Peter Littelmann.<br><br>
-
-I did my undergraduate studies in Germany, at the University of Wuppertal.
-</TD>
-<TD WIDTH="200">
-<H2 STYLE="clear:left"><A HREF="./index.html">Home</A></H2>
-<H2 STYLE="clear:left"><A HREF="./research.html">Research</A></H2>
-<H2 STYLE="clear:left"><A HREF="./teaching.html">Teaching</A></H2>
-</TD>
-</TR>
-</TABLE>
-
-<H2 STYLE="clear:left">Current Informations</H2>
-This semester I am supervising a student project on quantum groups and their applications.</A>
-
-<br><br>
-<H2 STYLE="clear:left">Contact Information</H2>
-<TABLE id="t02" WIDTH="1000">
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TH WIDTH="210" >Postal address:&nbsp&nbsp&nbsp&nbsp</TH>
-  <TD>
-    School of Mathematics and Statistics F07<BR>
-    University of Sydney NSW 2006<BR>
-    Australia
-  </TD>
-</TR>
-<TR align=LEFT>
-  <TH>Office:</TH>
-  <TD>
-    Room 526 <A HREF="/u/About/Carslaw.html">Carslaw Building</A>
-  </TD>
-</TR>
-<TR ALIGN=LEFT>
-  <TH>Email:</TH>
-  <TD>
-    <A HREF="mailto:michael.ehrig@sydney.edu.au"><TT>michael.ehrig@sydney.edu.au</TT></A>
-  </TD>
-</TR>
-<TR ALIGN=LEFT>
-  <TH>Phone:</TH>
-  <TD>+61 2 9351 5779</TD>
-</TR>
-<TR ALIGN=LEFT>
-  <TH>FAX:</TH>
-  <TD>+61 2 9351 4534</TD>
-</TR>
-</TABLE>
-<br><br>
-
-<H2 STYLE="clear:left">Office Hours</H2>
-<B>Monday</B> and <B>Wednesday</B>: <B>2:00pm-3:00pm</B>.<br>
-If you cannot make the scheduled hours, you can email me to set up an appointment.
-
-</BODY>
-</HTML>
+</html>
