--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
       			<a class="nav-item nav-link" href="./research.html">Research</a>
       			<a class="nav-item nav-link" href="./teaching.html">Teaching</a>
     			</div>
+			<form class="form-inline my-2 my-lg-0">
+			     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+			</form>
   		</div>
 	</nav>
 
