--- a/index.html
+++ b/index.html
@@ -24,12 +24,32 @@
   		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     			<span class="navbar-toggler-icon"></span>
   		</button>
-  		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    			<div class="navbar-nav">
-      			<a class="nav-item nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a>
-      			<a class="nav-item nav-link" href="./research.html">Research</a>
-      			<a class="nav-item nav-link" href="./teaching.html">Teaching</a>
-    			</div>
+  		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item active">
+        				<a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+      			</li>
+      			<li class="nav-item">
+        				<a class="nav-link" href="./research.html">Research</a>
+      			</li>
+      			<li class="nav-item">
+        				<a class="nav-link" href="./publications.html">Publications</a>
+      			</li>
+      			<li class="nav-item">
+        				<a class="nav-link" href="./teaching.html">Teaching</a>
+      			</li>
+    				<li class="nav-item dropdown">
+        				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          					Links
+        				</a>
+        				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          					<a class="dropdown-item" href="https://arxiv.org/search/math">arXiv</a>
+          					<a class="dropdown-item" href="http://mathscinet.ams.org/mathscinet/">MathSciNet</a>
+          					<div class="dropdown-divider"></div>
+          					<a class="dropdown-item" href="https://mathoverflow.net/">Mathoverflow</a>
+        				</div>
+      			</li>
+			</ul>
 			<form class="form-inline my-2 my-lg-0">
 			     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
 				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
