--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         				</div>
       			</li>
 			</ul>
-			<form class="form-inline my-2 my-lg-0" role="search" action="http://www.bing.com/search" method="GET" target="_blank">
-			     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+			<form class="form-inline my-2 my-lg-0" role="search" action="http://www.bing.com/search" method="get" target="_blank">
+			     <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
 				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 			</form>
   		</div>
