--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       			</li>
 			</ul>
 			<form class="form-inline my-2 my-lg-0" role="search" action="http://www.bing.com/search" method="get" target="_blank">
-			     <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+			      <input type="text" name="q" class="form-control" id="content"  placeholder="Keyword">
+				<button class="btn btn-outline-success my-2 my-sm-0" type="submit" name="sitesearch" value="michaelehrig.github.io">Search</button>
 			</form>
   		</div>
 	</nav>
