--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
         				</div>
       			</li>
 			</ul>
-			<form class="form-inline my-2 my-lg-0" role="search" action="http://www.bing.com/search" method="get" target="_blank">
-			      <input type="text" name="q" class="form-control" id="content"  placeholder="Keyword">
-				<button class="btn btn-outline-success my-2 my-sm-0" type="submit" name="sitesearch" value="michaelehrig.github.io">Search</button>
+			<form class="navbar-form" role="search" action="http://www.google.com/search" method="GET" target="_blank">
+				<div class="form-group">
+					<input type="text" name="q" class="form-control" id="content"  placeholder="Keyword">
+				</div>
+				<button type="submit" name="sitesearch" value="michaelehrig.github.io"  class="btn btn-default">Search</button>
 			</form>
   		</div>
 	</nav>
