--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         				</div>
       			</li>
 			</ul>
-			<ul>
+			<ul class="nav navbar-nav navbar-right">
 				<form class="navbar-form" role="search" action="http://www.google.com/search" method="GET" target="_blank">
 					<div class="form-group">
 						<input type="text" name="q" class="form-control" id="content"  placeholder="Keyword">
