--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     			<span class="navbar-toggler-icon"></span>
   		</button>
   		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="nav navbar-nav">
+			<ul class="nav navbar-nav mr-auto">
 				<li class="nav-item active">
         				<a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
       			</li>
@@ -49,14 +49,14 @@
           					<a class="dropdown-item" href="https://mathoverflow.net/">Mathoverflow</a>
         				</div>
       			</li>
-			</ul>
-			<ul class="nav navbar-nav navbar-right">
+				<li>
 				<form class="navbar-form" role="search" action="http://www.google.com/search" method="GET" target="_blank">
 					<div class="form-group">
 						<input type="text" name="q" class="form-control" id="content"  placeholder="Keyword">
 					</div>
 					<button type="submit" name="sitesearch" value="michaelehrig.github.io"  class="btn btn-default">Search</button>
 				</form>
+				</li>
 			</ul>
   		</div>
 	</nav>
