--- a/index.html
+++ b/index.html
@@ -50,12 +50,10 @@
         				</div>
       			</li>
 				<li>
-				<form class="navbar-form" role="search" action="http://www.google.com/search" method="GET" target="_blank">
-					<div class="form-group">
-						<input type="text" name="q" class="form-control" id="content"  placeholder="Keyword">
-					</div>
-					<button type="submit" name="sitesearch" value="michaelehrig.github.io"  class="btn btn-default">Search</button>
-				</form>
+					<form class="navbar-form" role="search" action="http://www.google.com/search" method="GET" target="_blank">
+						<input type="text" name="q" class="form-control mr-sm-2" id="content" placeholder="Keyword">
+						<button type="submit" name="sitesearch" value="michaelehrig.github.io" class="btn btn-success my-2 my-sm-0">Search</button>
+					</form>
 				</li>
 			</ul>
   		</div>
