--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
           					<a class="dropdown-item" href="https://mathoverflow.net/">Mathoverflow</a>
         				</div>
       			</li>
+			</ul>
+			<ul class="nav navbar-nav navbar-right">
 				<li>
-					<form class="navbar-form" role="search" action="http://www.google.com/search" method="GET" target="_blank">
+					<form class="form-inline" role="search" action="http://www.google.com/search" method="GET" target="_blank">
 						<input type="text" name="q" class="form-control mr-sm-2" id="content" placeholder="Keyword">
 						<button type="submit" name="sitesearch" value="michaelehrig.github.io" class="btn btn-success my-2 my-sm-0">Search</button>
 					</form>
