--- a/index.html
+++ b/index.html
@@ -50,11 +50,13 @@
         				</div>
       			</li>
 			</ul>
-			<ul class="nav navbar-nav navbar-right">
+			<ul class="nav navbar-nav">
 				<li>
 					<form class="form-inline" role="search" action="http://www.google.com/search" method="GET" target="_blank">
+						<div class="input-group">
 						<input type="text" name="q" class="form-control mr-sm-2" id="content" placeholder="Keyword">
 						<button type="submit" name="sitesearch" value="michaelehrig.github.io" class="btn btn-success my-2 my-sm-0">Search</button>
+						</div>
 					</form>
 				</li>
 			</ul>
