--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
 </head>
 
-<body>
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+
+
 	<nav class="navbar navbar-expand-lg navbar fixed-top navbar-dark bg-dark">
   		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     			<span class="navbar-toggler-icon"></span>
@@ -63,23 +65,25 @@
   		</div>
 	</nav>
 
-	<div class="container" >
-		<table id="t02">
-			<tr align=left valign=top>
-				<td width="200">
-					<img src="./Foto.jpg" width="190" border=0 style="float:left; margin:0px 20px 20px 0px" alt="Penrose tiling">
-				</td>
-				<td style="width:60%">
-					<h3>Dr. Michael Ehrig</h3> <br/> 
-					Department of Mathematics and Statistics <br/>
-					Beijing Institute of Mathematics<br/>
-					Liangxiang campus<br/>
-					Fangshan District <br/>
-					Beijing, P.R. China <br/>
-					micha.ehrig@outlook.com
-				</td>
-			</tr>
-		</table>
+	<div class="container">
+		<div class="page-header">
+			<table>
+				<tr align=left valign=top>
+					<td width="200">
+						<img src="./Foto.jpg" width="190" border=0 style="float:left; margin:0px 20px 20px 0px" alt="Penrose tiling">
+					</td>
+					<td style="width:60%">
+						<h3>Dr. Michael Ehrig</h3> <br/> 
+						Department of Mathematics and Statistics <br/>
+						Beijing Institute of Mathematics<br/>
+						Liangxiang campus<br/>
+						Fangshan District <br/>
+						Beijing, P.R. China <br/>
+						micha.ehrig@outlook.com
+					</td>
+				</tr>
+			</table>
+		</div>
 	</div>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
