--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
 	<div class="container">
 		<div class="page-header">
 			<table>
-				<tr align=left valign=top>
-					<td width="200">
-						<img src="./Foto.jpg" width="190" border=0 style="float:left; margin:0px 20px 20px 0px" alt="Penrose tiling">
+				<tr>
+					<td>
+						<img src="./Foto.jpg" style="width:200px: float:left; margin:0px 20px 20px 0px">
 					</td>
 					<td style="width:60%">
 						<h3>Dr. Michael Ehrig</h3> <br/> 
-						Department of Mathematics and Statistics <br/>
+						School of Mathematics and Statistics <br/>
 						Beijing Institute of Mathematics<br/>
 						Liangxiang campus<br/>
 						Fangshan District <br/>
