--- a/index.html
+++ b/index.html
@@ -8,18 +8,17 @@
     <meta name="description" content="Michael Ehrig, Website">
     <meta name="author" content="Michael Ehrig">
 
-    <title>Michael Ehrig -- Home</title>
+    <title>Michael Ehrig -- Homepage</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <!-- Custom styles for this template -->
-    <!-- Custom styles for this template -->
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
 
 	<nav class="navbar navbar-expand-lg navbar fixed-top navbar-dark bg-dark">
+	<div class="container">
   		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     			<span class="navbar-toggler-icon"></span>
   		</button>
@@ -60,6 +59,7 @@
 				</li>
 			</ul>
   		</div>
+	</div>
 	</nav>
 
 	<div class="container">
