--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
 
-	<nav class="navbar navbar-expand-lg navbar fixed-top navbar-dark bg-dark">
-	<div class="container">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     			<span class="navbar-toggler-icon"></span>
   		</button>
@@ -59,7 +58,6 @@
 				</li>
 			</ul>
   		</div>
-	</div>
 	</nav>
 
 	<div class="container">
