--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
   		</div>
 	</nav>
 
-	<br/>
-	<br/>
-	<br/>
+	<p></p>
+	<p></p>
+	<p></p>
 	<div class="container">
 		<div class="page-header">
 			<table>
@@ -83,7 +83,15 @@
 			</table>
 		</div>
 		<div class="container">
-			<p> Text here</p>
+			I am a Research Fellow in the <A HREF="http://www.maths.usyd.edu.au/res/Algebra.html">Algebra Research Group</A> of the <A HREF="/">School of Mathematics and Statistics</A> at the <A HREF="http://sydney.edu.au/">University of Sydney</A>, since August 2016.<br><br>
+
+			In the first semesters of 2015 and 2016, I was an instructor at the University of Cologne, while in the second semester of 2015, I was a temporary professor at the University of Bonn.<br><br>
+
+			From May 2009 to April 2015, I was a research fellow at the University of Bonn.<br><br>
+
+			I received my PhD in October 2008 from the University of Cologne. My PhD advisor was Peter Littelmann.<br><br>
+
+			I did my undergraduate studies in Germany, at the University of Wuppertal.
 		</div>
 	</div>
 
