--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
 						<h3>Dr. Michael Ehrig</h3> <br/> 
 						School of Mathematics and Statistics <br/>
 						Beijing Institute of Mathematics<br/>
-						Liangxiang campus<br/>
-						Fangshan District <br/>
+						Liangxiang campus, Fangshan District <br/>
 						Beijing, P.R. China <br/>
 						micha.ehrig@outlook.com
 					</td>
