--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<table>
 				<tr>
 					<td>
-						<img src="images/photo.jpeg" width="200" style="float:left; margin:0px 20px 20px 0px">
+						<img src="images/photo.jpeg" style="width:200px; margin:0px 20px 20px 0px">
 					</td>
 					<td style="width:60%">
 						<h3>Dr. Michael Ehrig</h3> <br/> 
