--- a/index.html
+++ b/index.html
@@ -70,12 +70,14 @@
 						<img src="images/photo.jpeg" style="width:200px; margin:0px 20px 20px 0px">
 					</td>
 					<td style="width:60%">
-						<h3>Dr. Michael Ehrig</h3> <br/> 
+						<h3>Dr. Michael Ehrig</h3> <br/>
+						<b>Address:</b><br/>
 						School of Mathematics and Statistics <br/>
 						Beijing Institute of Mathematics<br/>
 						Liangxiang campus, Fangshan District <br/>
 						Beijing, P.R. China <br/>
-						micha.ehrig@outlook.com
+						<br/>
+						email: <b>micha.ehrig@outlook.com</b>
 					</td>
 				</tr>
 			</table>
