--- a/index.html
+++ b/index.html
@@ -83,15 +83,13 @@
 			</table>
 		</div>
 		<div class="container">
-			I am a Research Fellow in the <A HREF="http://www.maths.usyd.edu.au/res/Algebra.html">Algebra Research Group</A> of the <A HREF="/">School of Mathematics and Statistics</A> at the <A HREF="http://sydney.edu.au/">University of Sydney</A>, since August 2016.<br><br>
+			<p>I am an associate professor at <A HREF="http://math.bit.edu.cn/english/index.htm">School of Mathematics</A> of the <A HREF="http://www.bit.edu.cn/">Beijing Institute of Technology</A>.</p>
 
-			In the first semesters of 2015 and 2016, I was an instructor at the University of Cologne, while in the second semester of 2015, I was a temporary professor at the University of Bonn.<br><br>
+			<p>Previously, I have been a researcher and lecturer at the University of Sydney (Australia), the University of Bonn (Germany), and the University of Cologne (Germany).</p>
+			<p>I received my Ph.D. at the University of Cologne (Germany) under the supervision of Peter Littelmann and did my undergraduate studies at the University of Wuppertal (Germany).</p>
 
-			From May 2009 to April 2015, I was a research fellow at the University of Bonn.<br><br>
+			<p>In research, my interest is representation theory and categorification, especially with its applications to Lie theory, algebraic combinatorics, algebraic topology and link homologies, and algebraic geometry.</p>
 
-			I received my PhD in October 2008 from the University of Cologne. My PhD advisor was Peter Littelmann.<br><br>
-
-			I did my undergraduate studies in Germany, at the University of Wuppertal.
 		</div>
 	</div>
 
