--- a/index.html
+++ b/index.html
@@ -82,14 +82,15 @@
 				</tr>
 			</table>
 		</div>
-		<div class="container">
-			<p>I am an associate professor at the <A HREF="http://math.bit.edu.cn/english/index.htm">School of Mathematics</A> of the <A HREF="http://www.bit.edu.cn/">Beijing Institute of Technology</A>.</p>
+		<div class="panel panel-success">
+			<div class="panel-body">
+				<p>I am an associate professor at the <A HREF="http://math.bit.edu.cn/english/index.htm">School of Mathematics</A> of the <A HREF="http://www.bit.edu.cn/">Beijing Institute of Technology</A>.</p>
 
-			<p>Before joining the BIT in April 2019, I have been a researcher and lecturer at the University of Sydney (Australia), the University of Bonn (Germany), and the University of Cologne (Germany).</p>
-			<p>I received my Ph.D. at the University of Cologne (Germany) under the supervision of Peter Littelmann and did my undergraduate studies at the University of Wuppertal (Germany).</p>
+				<p>Before joining the BIT in April 2019, I have been a researcher and lecturer at the University of Sydney (Australia), the University of Bonn (Germany), and the University of Cologne (Germany).</p>
+				<p>I received my Ph.D. at the University of Cologne (Germany) under the supervision of Peter Littelmann and did my undergraduate studies at the University of Wuppertal (Germany).</p>
 
-			<p>In research, my interest is representation theory and categorification, especially with its applications to Lie theory, algebraic combinatorics, algebraic topology and link homologies, and algebraic geometry.</p>
-
+				<p>In research, my interest is representation theory and categorification, especially with its applications to Lie theory, algebraic combinatorics, algebraic topology and link homologies, and algebraic geometry.</p>
+			</div>
 		</div>
 	</div>
 
