--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 			</table>
 		</div>
 		<div class="panel panel-success">
+			<div class="panel-heading"><h2>General Information</h2></div>
 			<div class="panel-body">
 				<p>I am an associate professor at the <A HREF="http://math.bit.edu.cn/english/index.htm">School of Mathematics</A> of the <A HREF="http://www.bit.edu.cn/">Beijing Institute of Technology</A>.</p>
 
