--- a/index.html
+++ b/index.html
@@ -93,6 +93,20 @@
 				<p>In research, my interest is representation theory and categorification, especially with its applications to Lie theory, algebraic combinatorics, algebraic topology and link homologies, and algebraic geometry.</p>
 			</div>
 		</div>
+
+		<div class="card bg-light mb-3" style="max-width: 18rem;">
+  			<div class="card-header"><h2>General Information</h2></div>
+  				<div class="card-body">
+   				<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				<p class="card-text">I am an associate professor at the <A HREF="http://math.bit.edu.cn/english/index.htm">School of Mathematics</A> of the <A HREF="http://www.bit.edu.cn/">Beijing Institute of Technology</A>.</p>
+
+				<p class="card-text">Before joining the BIT in April 2019, I have been a researcher and lecturer at the University of Sydney (Australia), the University of Bonn (Germany), and the University of Cologne (Germany).</p>
+				<p class="card-text">I received my Ph.D. at the University of Cologne (Germany) under the supervision of Peter Littelmann and did my undergraduate studies at the University of Wuppertal (Germany).</p>
+
+				<p class="card-text">In research, my interest is representation theory and categorification, especially with its applications to Lie theory, algebraic combinatorics, algebraic topology and link homologies, and algebraic geometry.</p>
+  			</div>
+		</div>
+
 	</div>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
