--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <title>Michael Ehrig -- Homepage</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
@@ -94,9 +93,9 @@
 			</div>
 		</div>
 
-		<div class="card bg-light mb-3" style="max-width: 18rem;">
-  			<div class="card-header"><h2>General Information</h2></div>
-  				<div class="card-body">
+		<div class="card border-success mb-3" style="max-width: 18rem;">
+  			<div class="card-body">
+				<h2 class="card-title">General Information</h2>
    				<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 				<p class="card-text">I am an associate professor at the <A HREF="http://math.bit.edu.cn/english/index.htm">School of Mathematics</A> of the <A HREF="http://www.bit.edu.cn/">Beijing Institute of Technology</A>.</p>
 
