--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 			</div>
 		</div>
 
-		<div class="card border-success mb-3">
+		<div class="card border-success">
   			<div class="card-body">
 				<h2 class="card-title">General Information</h2>
    				<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
