--- a/index.html
+++ b/index.html
@@ -62,40 +62,31 @@
 	<p></p>
 	<p></p>
 	<div class="container">
-		<div class="page-header">
-			<table>
-				<tr>
-					<td>
-						<img src="images/photo.jpeg" style="width:200px; margin:0px 20px 20px 0px">
-					</td>
-					<td style="width:60%">
-						<h3>Dr. Michael Ehrig</h3> <br/>
-						<b>Address:</b><br/>
-						School of Mathematics and Statistics <br/>
-						Beijing Institute of Mathematics<br/>
-						Liangxiang campus, Fangshan District <br/>
-						Beijing, P.R. China <br/>
-						<br/>
-						email: <b>micha.ehrig@outlook.com</b>
-					</td>
-				</tr>
-			</table>
-		</div>
-		<div class="panel panel-success">
-			<div class="panel-heading"><h2>General Information</h2></div>
-			<div class="panel-body">
-				<p>I am an associate professor at the <A HREF="http://math.bit.edu.cn/english/index.htm">School of Mathematics</A> of the <A HREF="http://www.bit.edu.cn/">Beijing Institute of Technology</A>.</p>
-
-				<p>Before joining the BIT in April 2019, I have been a researcher and lecturer at the University of Sydney (Australia), the University of Bonn (Germany), and the University of Cologne (Germany).</p>
-				<p>I received my Ph.D. at the University of Cologne (Germany) under the supervision of Peter Littelmann and did my undergraduate studies at the University of Wuppertal (Germany).</p>
-
-				<p>In research, my interest is representation theory and categorification, especially with its applications to Lie theory, algebraic combinatorics, algebraic topology and link homologies, and algebraic geometry.</p>
+		<div class="card border-success">
+  			<div class="card-body">
+				<table>
+					<tr>
+						<td>
+							<img src="images/photo.jpeg" style="width:200px; margin:0px 20px 20px 0px">
+						</td>
+						<td style="width:60%">
+							<h3>Dr. Michael Ehrig</h3> <br/>
+							<b>Address:</b><br/>
+							School of Mathematics and Statistics <br/>
+							Beijing Institute of Mathematics<br/>
+							Liangxiang campus, Fangshan District <br/>
+							Beijing, P.R. China <br/>
+							<br/>
+							email: <b>micha.ehrig@outlook.com</b>
+						</td>
+					</tr>
+				</table>
 			</div>
 		</div>
 
 		<div class="card border-success">
+			<div class="card-header"><h2>General Information</h2></div>
   			<div class="card-body">
-				<h2 class="card-title">General Information</h2>
    				<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 				<p class="card-text">I am an associate professor at the <A HREF="http://math.bit.edu.cn/english/index.htm">School of Mathematics</A> of the <A HREF="http://www.bit.edu.cn/">Beijing Institute of Technology</A>.</p>
 
