--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 						<td style="width:60%">
 							<h3>Dr. Michael Ehrig</h3> <br/>
 							<b>Address:</b><br/>
+							Office 316A,br/>
 							School of Mathematics and Statistics <br/>
 							Beijing Institute of Mathematics<br/>
 							Liangxiang campus, Fangshan District <br/>
