--- a/index.html
+++ b/index.html
@@ -63,25 +63,22 @@
 	<p></p>
 	<div class="container">
 		<div class="card border-success">
-  			<div class="card-body">
-				<table>
-					<tr>
-						<td>
-							<img src="images/photo.jpeg" style="width:200px; margin:0px 20px 20px 0px">
-						</td>
-						<td style="width:60%">
-							<h3>Dr. Michael Ehrig</h3> <br/>
-							<b>Address:</b><br/>
-							Office 316A,br/>
-							School of Mathematics and Statistics <br/>
-							Beijing Institute of Mathematics<br/>
-							Liangxiang campus, Fangshan District <br/>
-							Beijing, P.R. China <br/>
-							<br/>
-							email: <b>micha.ehrig@outlook.com</b>
-						</td>
-					</tr>
-				</table>
+			<div class="row no-gutters">
+    				<div class="col-md-4">
+      				<img src="images/photo.jpeg" class="card-img">
+    				</div>
+    				<div class="col">
+					<h3 class="card-title">Dr. Michael Ehrig</h3> <br/>
+					<p class="card-text"><b>Address:</b><br/>
+					Office 316A,br/>
+					School of Mathematics and Statistics <br/>
+					Beijing Institute of Mathematics<br/>
+					Liangxiang campus, Fangshan District <br/>
+					Beijing, P.R. China <br/>
+					<br/>
+					email: <b>micha.ehrig@outlook.com</b></p>
+
+				</div>
 			</div>
 		</div>
 
