--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     				<div class="col">
 					<h3 class="card-title">Dr. Michael Ehrig</h3> <br/>
 					<p class="card-text"><b>Address:</b><br/>
-					Office 316A,br/>
+					Office 316A<br/>
 					School of Mathematics and Statistics <br/>
 					Beijing Institute of Mathematics<br/>
 					Liangxiang campus, Fangshan District <br/>
