--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 	<div class="container">
 		<div class="card border-success">
 			<div class="row no-gutters">
-    				<div class="col-md-2">
-      				<img src="images/photo.jpeg" class="card-img">
+    				<div class="col-md-4">
+      				<img src="images/photo.jpeg" class="card-img" width="190" style="margin:0px 20px 20px 0px">
     				</div>
     				<div class="col">
 					<h3 class="card-title">Dr. Michael Ehrig</h3> <br/>
