--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		<div class="card border-success">
 			<div class="card-header"><h2>General Information</h2></div>
   			<div class="card-body">
-				<p class="card-text">I am an associate professor at the <A HREF="http://math.bit.edu.cn/english/index.htm">School of Mathematics</A> of the <A HREF="http://www.bit.edu.cn/">Beijing Institute of Technology</A>.</p>
+				<p class="card-text">I am an associate professor at the <A HREF="http://math.bit.edu.cn/english/index.htm">School of Mathematics and Statistics</A> of the <A HREF="http://www.bit.edu.cn/">Beijing Institute of Technology</A>.</p>
 
 				<p class="card-text">Before joining the BIT in April 2019, I have been a researcher and lecturer at the University of Sydney (Australia), the University of Bonn (Germany), and the University of Cologne (Germany).</p>
 				<p class="card-text">I received my Ph.D. at the University of Cologne (Germany) under the supervision of Peter Littelmann and did my undergraduate studies at the University of Wuppertal (Germany).</p>
