--- a/publications.html
+++ b/publications.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Michael Ehrig, Website">
     <meta name="author" content="Michael Ehrig">
 
-    <title>Michael Ehrig -- Research</title>
+    <title>Michael Ehrig -- Publications</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -26,10 +26,10 @@
         				<a class="nav-link" href="./index.html">Home</a>
       			</li>
       			<li class="nav-item">
-        				<a class="nav-link" href="./research.html">Research <span class="sr-only">(current)</span></a>
+        				<a class="nav-link" href="./research.html">Research</a>
       			</li>
       			<li class="nav-item">
-        				<a class="nav-link" href="./publications.html">Publications</a>
+        				<a class="nav-link" href="./publications.html">Publications <span class="sr-only">(current)</span></a>
       			</li>
       			<li class="nav-item">
         				<a class="nav-link" href="./teaching.html">Teaching</a>
