--- a/teaching.html
+++ b/teaching.html
@@ -1,208 +1,79 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
-<HTML>
-<HEAD>
-<TITLE>Michael Ehrig, Sydney Mathematics &amp;amp; Statistics</TITLE>
-<link rel="stylesheet" href="http://www.maths.usyd.edu.au/Steely.css" type="text/css">
-<style>
-H2 {
-  background-color: transparent;
-  margin-bottom: 0px;
-  margin-top: 0px;
-  padding-bottom: 0;
-}
-table#t02 table {
-    border=1;
-}
-table#t02 th {
-    padding: 5px;
-    border=0;
-}
-table#t02 td {
-    padding: 5px;
-    border=0;
-    background-color: #EDEDED;
-}
-table#t01 table {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-table#t01 th {
-    padding: 5px;
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-table#t01 td {
-    padding: 5px;
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-table#t01 {
-    background-color: #0000ff;
-}
-table#t01 th {
-    text-align: center;
-}
-a:link {
-    background-color: transparent;
-}
-</style>
-</HEAD>
-<BODY>
+<!doctype html>
+<html lang="en">
 
-<H1>Michael Ehrig</H1>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="description" content="Michael Ehrig, Website">
+    <meta name="author" content="Michael Ehrig">
 
-<P>
+    <title>Michael Ehrig -- Teaching</title>
 
-<TABLE id="t02" WIDTH="1000" >
-<TR ALIGN=LEFT VALIGN=TOP>
-<TD WIDTH="200">
-<IMG SRC="./Foto.jpg" WIDTH="190" BORDER=0 STYLE="float:left; margin:0px 20px 20px 0px" ALT="Penrose tiling">
-<P>
-</TD>
-<TD WIDTH="600">
-<b>Current Teaching</b><br><br>
-I am supervising a student project on quantum groups and their applications this semester.<br><br>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
 
-See below for a list of classes I taught in the past.<br><br>
-</TD>
-</TD>
-<TD WIDTH="200">
-<H2 STYLE="clear:left"><A HREF="./index.html">Home</A></H2>
-<H2 STYLE="clear:left"><A HREF="./research.html">Research</A></H2>
-<H2 STYLE="clear:left"><A HREF="./teaching.html">Teaching</A></H2>
-</TD>
-</TR>
-</TABLE>
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
-<H2 STYLE="clear:left">Teaching</H2>
-<TABLE id="t01" WIDTH="1000" >
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TH WIDTH="31%"><b>Course</b></TH>
-  <TH WIDTH="17%"><b>Type</b></TH>
-  <TH WIDTH="5%"><b>Semester</b></TH>
-  <TH WIDTH="17%"><b>University</b></TH>
-  <TH WIDTH="20%"><b>Length</b></TH>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Commutative algebra</b></TD>
-  <TD><i>Graduate class</i></TD>
-  <TD><i>2018</i></TD>
-  <TD><i>University of Sydney</i></TD>
-  <TD><i>~26 hours</i></TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Commutative algebra</b></TD>
-  <TD><i>Graduate class</i></TD>
-  <TD><i>2017</i></TD>
-  <TD><i>University of Sydney</i></TD>
-  <TD><i>~26 hours</i></TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Tropical geometry</b></TD>
-  <TD><i>Graduate class</i></TD>
-  <TD><i>2016</i></TD>
-  <TD><i>University of Cologne</i></TD>
-  <TD><i>~45 hours</i> + weekly tutorials</TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Categorification at roots of unity</b></TD>
-  <TD><i>Graduate seminar</i></TD>
-  <TD><i>2016</i></TD>
-  <TD><i>University of Bonn</i></TD>
-  <TD><i>~30 hours</i></TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Representation theory II</b></TD>
-  <TD><i>Graduate class</i></TD>
-  <TD><i>2015</i></TD>
-  <TD><i>University of Bonn</i></TD>
-  <TD><i>~45 hours</i> + weekly tutorials</TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Recent topics in representation theory</b></TD>
-  <TD><i>Graduate seminar</i></TD>
-  <TD><i>2015</i></TD>
-  <TD><i>University of Bonn</i></TD>
-  <TD><i>~30 hours</i></TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Hall algebras and related topics</b></TD>
-  <TD><i>Graduate seminar</i></TD>
-  <TD><i>2015</i></TD>
-  <TD><i>University of Bonn</i></TD>
-  <TD><i>~30 hours</i></TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Geometric invariant theory and quiver varieties</b></TD>
-  <TD><i>Graduate seminar</i></TD>
-  <TD><i>2014</i></TD>
-  <TD><i>University of Bonn</i></TD>
-  <TD><i>~30 hours</i></TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Hopf Algebras and Quantum groups</b></TD>
-  <TD><i>Graduate class</i></TD>
-  <TD><i>2014</i></TD>
-  <TD><i>University of Cologne</i></TD>
-  <TD><i>~45 hours</i> + weekly tutorials</TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Research seminar algebra</b></TD>
-  <TD><i>Graduate seminar</i></TD>
-  <TD><i>2013</i></TD>
-  <TD><i>University of Cologne</i></TD>
-  <TD><i>~30 hours</i></TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Coxeter groups and Hecke algebras</b></TD>
-  <TD><i>Undergraduate class</i></TD>
-  <TD><i>2013</i></TD>
-  <TD><i>University of Cologne</i></TD>
-  <TD><i>~45 hours</i> + weekly tutorials</TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Kac-Moody groups and flag varieties</b></TD>
-  <TD><i>Graduate seminar</i></TD>
-  <TD><i>2013</i></TD>
-  <TD><i>University of Cologne</i></TD>
-  <TD><i>~30 hours</i></TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Koszul duality</b></TD>
-  <TD><i>Graduate seminar</i></TD>
-  <TD><i>2011</i></TD>
-  <TD><i>University of Bonn</i></TD>
-  <TD><i>~30 hours</i></TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Flag varieties, Kac-Moody groups and representation theory</b></TD>
-  <TD><i>Graduate seminar</i></TD>
-  <TD><i>2009</i></TD>
-  <TD><i>University of Bonn</i></TD>
-  <TD><i>~30 hours</i></TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Introduction to algebraic geometry and toric varieties</b></TD>
-  <TD><i>Undergraduate seminar</i></TD>
-  <TD><i>2008</i></TD>
-  <TD><i>University of Cologne</i></TD>
-  <TD><i>~30 hours</i></TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Symmetries and ornaments</b></TD>
-  <TD><i>Undergraduate seminar</i></TD>
-  <TD><i>2008</i></TD>
-  <TD><i>University of Cologne</i></TD>
-  <TD><i>~30 hours</i></TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Introduction to mathematics</b></TD>
-  <TD><i>Undergraduate class</i></TD>
-  <TD><i>2006</i></TD>
-  <TD><i>University of Cologne</i></TD>
-  <TD><i>~30 hours</i></TD>
-</TR>
-</TABLE>
 
-</BODY>
-</HTML>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    			<span class="navbar-toggler-icon"></span>
+  		</button>
+  		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="nav navbar-nav mr-auto">
+				<li class="nav-item active">
+        				<a class="nav-link" href="./index.html">Home</a>
+      			</li>
+      			<li class="nav-item">
+        				<a class="nav-link" href="./research.html">Research</a>
+      			</li>
+      			<li class="nav-item">
+        				<a class="nav-link" href="./publications.html">Publications</a>
+      			</li>
+      			<li class="nav-item">
+        				<a class="nav-link" href="./teaching.html">Teaching <span class="sr-only">(current)</span></a>
+      			</li>
+    				<li class="nav-item dropdown">
+        				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          					Links
+        				</a>
+        				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          					<a class="dropdown-item" href="https://arxiv.org/search/math">arXiv</a>
+          					<a class="dropdown-item" href="http://mathscinet.ams.org/mathscinet/">MathSciNet</a>
+          					<div class="dropdown-divider"></div>
+          					<a class="dropdown-item" href="https://mathoverflow.net/">Mathoverflow</a>
+        				</div>
+      			</li>
+			</ul>
+			<ul class="nav navbar-nav">
+				<li>
+					<form class="form-inline" role="search" action="http://www.google.com/search" method="GET" target="_blank">
+						<div class="input-group">
+						<input type="text" name="q" class="form-control mr-sm-2" id="content" placeholder="Keyword">
+						<button type="submit" name="sitesearch" value="michaelehrig.github.io" class="btn btn-success my-2 my-sm-0">Search</button>
+						</div>
+					</form>
+				</li>
+			</ul>
+  		</div>
+	</nav>
+
+	<p></p>
+	<p></p>
+	<div class="container">
+		<div class="card border-success">
+			<div class="card-header"><h2>To be filled</h2></div>
+  			<div class="card-body">
+				<p class="card-text"></p>
+  			</div>
+		</div>
+
+	</div>
+
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
+
+</html>
