--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     				<div class="col-md-1">
     				</div>
     				<div class="col">
-					<h3 class="card-title">Dr. Michael Ehrig</h3> <br/>
+					<div class="card-header"><h3>Dr. Michael Ehrig</h3></div>
 					<p class="card-text"><b>Address:</b><br/>
 					Office 316A<br/>
 					School of Mathematics and Statistics <br/>
@@ -86,7 +86,7 @@
 		<p></p>
 		<p></p>
 		<div class="card border-success">
-			<div class="card-header"><h2>General Information</h2></div>
+			<div class="card-header"><h3>General Information</h3></div>
   			<div class="card-body">
 				<p class="card-text">I am an associate professor at the <A HREF="http://math.bit.edu.cn/english/index.htm">School of Mathematics and Statistics</A> of the <A HREF="http://www.bit.edu.cn/">Beijing Institute of Technology</A>.</p>
 
