--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
 					School of Mathematics and Statistics <br/>
 					Beijing Institute of Mathematics<br/>
 					Liangxiang campus, Fangshan District <br/>
-					Beijing, P.R. China <br/>
-					<br/>
-					email: <b>micha.ehrig@outlook.com</b></p>
+					Beijing, P.R. China </p>
+					<p class="card-text">email: <b>micha.ehrig@outlook.com</b></p>
 
 				</div>
 			</div>
