--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     				</div>
     				<div class="col">
 					<div class="card-header"><h3>Dr. Michael Ehrig</h3></div>
+					<p class="card-text"></p>
 					<p class="card-text"><b>Address:</b><br/>
 					Office 316A<br/>
 					School of Mathematics and Statistics <br/>
