--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			</ul>
 			<ul class="nav navbar-nav">
 				<li>
-					<form class="form-inline" role="search" action="http://www.google.com/search" method="GET" target="_blank">
+					<form class="form-inline" role="search" action="http://www.bing.com/search" method="GET" target="_blank">
 						<div class="input-group">
 						<input type="text" name="q" class="form-control mr-sm-2" id="content" placeholder="Keyword">
 						<button type="submit" name="sitesearch" value="michaelehrig.github.io" class="btn btn-success my-2 my-sm-0">Search</button>
