--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
     				<div class="col-md-2">
       				<img src="images/photo.jpeg" class="card-img">
     				</div>
+    				<div class="col-md-0.25">
+    				</div>
     				<div class="col">
 					<div class="card-header"><h3>Dr. Michael Ehrig</h3></div>
 					<p class="card-text"></p>
