--- a/index.html
+++ b/index.html
@@ -63,11 +63,9 @@
 	<p></p>
 	<div class="container">
 		<div class="card border-success">
-			<div class="row no-gutters">
+			<div class="row">
     				<div class="col-md-2">
       				<img src="images/photo.jpeg" class="card-img">
-    				</div>
-    				<div class="col-md-0.25">
     				</div>
     				<div class="col">
 					<div class="card-header"><h3>Dr. Michael Ehrig</h3></div>
