--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	<p></p>
 	<div class="container">
 		<div class="card border-success">
-			<div class="row">
+			<div class="row align-items-center">
     				<div class="col-md-2 align-self-center">
       				<img src="images/photo.jpeg" class="card-img">
     				</div>
