--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	<div class="container">
 		<div class="card border-success">
 			<div class="row align-items-center">
-    				<div class="col-2 align-self-center">
+    				<div class="col-2">
       				<img src="images/photo.jpeg" class="card-img">
     				</div>
     				<div class="col">
