--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 	<p></p>
 	<div class="container">
 		<div class="card border-success">
-			<div class="row align-items-center">
-    				<div class="col-3">
+			<div class="row no-gutters">
+    				<div class="col-3 px-5">
       				<img src="images/photo.jpeg" class="card-img">
     				</div>
     				<div class="col">
