--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				<p class="card-text">Before joining the BIT in April 2019, I have been a researcher and lecturer at the University of Sydney (Australia), the University of Bonn (Germany), and the University of Cologne (Germany).</p>
 				<p class="card-text">I received my Ph.D. at the University of Cologne (Germany) under the supervision of Peter Littelmann and did my undergraduate studies at the University of Wuppertal (Germany).</p>
 
-				<p class="card-text">In research, my interest is representation theory and categorification, especially with its applications to Lie theory, algebraic combinatorics, algebraic topology and link homologies, and algebraic geometry.</p>
+				<p class="card-text">In research, my main interests are representation theory and categorification, especially with their applications to Lie theory, algebraic combinatorics, algebraic topology and link homologies, and algebraic geometry.</p>
   			</div>
 		</div>
 
