--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       				<img src="images/photo.jpeg" class="card-img">
     				</div>
     				<div class="col">
-					<div class="card-header"><h3>Dr. Michael Ehrig</h3></div>
+					<div class="card-header"><h3>Michael Ehrig, Ph.D. and associate professor</h3></div>
 					<p class="card-text"></p>
 					<p class="card-text"><b>Address:</b><br/>
 					Office 316A<br/>
