--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
       				<img src="images/photo.jpeg" class="card-img">
     				</div>
     				<div class="col">
-					<div class="card-header"><h3>Michael Ehrig</h3></div>
-					<p class="card-text">Ph.D., Associate Professor</p>
+					<div class="card-header"><h3>Michael Ehrig, Ph.D., Associate Professor</h3></div>
+					<p class="card-text"></p>
 					<p class="card-text"><b>Address:</b><br/>
 					Office 316A<br/>
 					School of Mathematics and Statistics <br/>
