--- a/publications.html
+++ b/publications.html
@@ -69,19 +69,19 @@
 				<ol>
 					<li><i>Algebraic properties of zig-zag algebras</i> <br>
 						with <b>D. Tubbenhauer</b>: <a href="https://arxiv.org/abs/1807.11173">ArXiv version</a><br>
-						(other versions: <a href="./zigzag.pdf">Local version</a>)</li>
+						(other versions: <a href="./pdfs/zigzag.pdf">Local version</a>)</li>
 					<li><i>Relative cellular algebras</i> <br>
 						with <b>D. Tubbenhauer</b>: <a href="https://arxiv.org/abs/1710.02851">ArXiv version</a><br>
-						(other versions: <a href="./rel-cell.pdf">Local version</a>)</li>
+						(other versions: <a href="./pdfs/rel-cell.pdf">Local version</a>)</li>
 					<li><i>The periplectic Brauer algebra III: The Deligne category</i> <br>
 						with <b>K. Coulembier</b>: <a href="https://arxiv.org/abs/1704.07547">ArXiv version</a><br>
-						(other versions: <a href="./PB3.pdf">Local version</a>)</li>
+						(other versions: <a href="./pdfs/PB3.pdf">Local version</a>)</li>
 					<li><i>Singular TQFTs, foams and type D arc algebras</i> <br>
 						with <b>D. Tubbenhauer</b> and <b>A. Wilbert</b>: <a href="http://arxiv.org/abs/1611.07444">ArXiv version</a><br>
-						(other versions: <a href="./foams-typeD.pdf">Local version</a>)</li>
+						(other versions: <a href="./pdfs/foams-typeD.pdf">Local version</a>)</li>
   					<li><i>Generic gl(2)-foams, web and arc algebras</i><br>
       					with <b>C. Stroppel</b> and <b>D. Tubbenhauer</b>: <a href="http://arxiv.org/abs/1601.08010">ArXiv version</a><br>
-						(other versions: <a href="./foams-Kh-catO.pdf">Local version</a>)</li>
+						(other versions: <a href="./pdfs/foams-Kh-catO.pdf">Local version</a>)</li>
 				</ol>
 				</p>
   			</div>
