--- a/publications.html
+++ b/publications.html
@@ -104,7 +104,7 @@
 					<li><i>2-row Springer fibres and Khovanov diagram algebras for type D</i>, Canadian Journal of Mathematics, 68(6), 1285--1333, 2016<br>
 						with <b>C. Stroppel</b>: <a href="https://www.cambridge.org/core/journals/canadian-journal-of-mathematics/article/2row-springer-fibres-and-khovanov-diagram-algebras-for-type-d/ED9D868E67D677BD4D1D84929EFB3DF3">Canadian Journal of Mathematics version</a>, <a href="http://arxiv.org/pdf/1209.4998.pdf">ArXiv version</a> and <a href="./pdfs/Springer.pdf">Local version</a></li>
 					<li><i>MV-polytopes via affine buildings</i>, Duke Mathematical Journal, 155(3), 433--482, 2010<br>
-						<a href="http://projecteuclid.org/DPubS?service=UI&version=1.0&verb=Display&handle=euclid.dmj/1289916770">Duke Mathematical Journal version</a>, <a href="http://arxiv.org/abs/0903.3744">ArXiv version</a> and  <a href="./pdfs/MVcycles.pdf">Local version</a></li>
+						<a href="http://projecteuclid.org/DPubS?service=UI&version=1.0&verb=Display&handle=euclid.dmj/1289916770">Duke Mathematical Journal version</a> and <a href="http://arxiv.org/abs/0903.3744">ArXiv version</a></li>
 				</ol>
   			</div>
 		</div>
