--- a/publications.html
+++ b/publications.html
@@ -85,7 +85,8 @@
 			<div class="card-header"><h3>Publications</h3></div>
   			<div class="card-body">
 				<ol>
-					<li><i>Functoriality of colored link homologies</i>, Proceedings of the London Mathematical Society, 117(5), 996--1040, 2018 <br>
+					<li><i>Functoriality of colored link homologies</i>,<br>
+						in Proceedings of the London Mathematical Society, 117(5), 996--1040, 2018 <br>
 						with <b>D. Tubbenhauer</b> and <b>P. Wedrich</b>: <a href="https://londmathsoc.onlinelibrary.wiley.com/doi/10.1112/plms.12154">PLMS version</a>, <a href="https://arxiv.org/abs/1703.06691">ArXiv version</a> and <a href="./pdfs/functoriality.pdf">Local version</a></li>
 					<li><i>The periplectic Brauer algebra II: Decomposition multiplicities</i>, Journal of Combinatorial Algebra, 2(1), 19--46, 2018 <br>
 						with <b>K. Coulembier</b>: <a href="http://www.ems-ph.org/journals/show_abstract.php?issn=2415-6302&vol=2&iss=1&rank=2">J. Comb. Algebra version</a>, <a href="http://arxiv.org/abs/1701.04606">ArXiv version</a> and <a href="./pdfs/PB2.pdf">Local version</a></li>
