--- a/teaching.html
+++ b/teaching.html
@@ -63,9 +63,136 @@
 	<p></p>
 	<div class="container">
 		<div class="card border-success">
-			<div class="card-header"><h2>To be filled</h2></div>
+			<div class="card-header"><h3>Teaching</h3></div>
   			<div class="card-body">
-				<p class="card-text"></p>
+<TABLE id="t01" WIDTH="1000" >
+<TR ALIGN=LEFT VALIGN=TOP>
+  <TH WIDTH="31%"><b>Course</b></TH>
+  <TH WIDTH="17%"><b>Type</b></TH>
+  <TH WIDTH="5%"><b>Semester</b></TH>
+  <TH WIDTH="17%"><b>University</b></TH>
+  <TH WIDTH="20%"><b>Length</b></TH>
+</TR>
+<TR ALIGN=LEFT VALIGN=TOP>
+  <TD><b>Commutative algebra</b></TD>
+  <TD><i>Graduate class</i></TD>
+  <TD><i>2018</i></TD>
+  <TD><i>University of Sydney</i></TD>
+  <TD><i>~26 hours</i></TD>
+</TR>
+<TR ALIGN=LEFT VALIGN=TOP>
+  <TD><b>Commutative algebra</b></TD>
+  <TD><i>Graduate class</i></TD>
+  <TD><i>2017</i></TD>
+  <TD><i>University of Sydney</i></TD>
+  <TD><i>~26 hours</i></TD>
+</TR>
+<TR ALIGN=LEFT VALIGN=TOP>
+  <TD><b>Tropical geometry</b></TD>
+  <TD><i>Graduate class</i></TD>
+  <TD><i>2016</i></TD>
+  <TD><i>University of Cologne</i></TD>
+  <TD><i>~45 hours</i> + weekly tutorials</TD>
+</TR>
+<TR ALIGN=LEFT VALIGN=TOP>
+  <TD><b>Categorification at roots of unity</b></TD>
+  <TD><i>Graduate seminar</i></TD>
+  <TD><i>2016</i></TD>
+  <TD><i>University of Bonn</i></TD>
+  <TD><i>~30 hours</i></TD>
+</TR>
+<TR ALIGN=LEFT VALIGN=TOP>
+  <TD><b>Representation theory II</b></TD>
+  <TD><i>Graduate class</i></TD>
+  <TD><i>2015</i></TD>
+  <TD><i>University of Bonn</i></TD>
+  <TD><i>~45 hours</i> + weekly tutorials</TD>
+</TR>
+<TR ALIGN=LEFT VALIGN=TOP>
+  <TD><b>Recent topics in representation theory</b></TD>
+  <TD><i>Graduate seminar</i></TD>
+  <TD><i>2015</i></TD>
+  <TD><i>University of Bonn</i></TD>
+  <TD><i>~30 hours</i></TD>
+</TR>
+<TR ALIGN=LEFT VALIGN=TOP>
+  <TD><b>Hall algebras and related topics</b></TD>
+  <TD><i>Graduate seminar</i></TD>
+  <TD><i>2015</i></TD>
+  <TD><i>University of Bonn</i></TD>
+  <TD><i>~30 hours</i></TD>
+</TR>
+<TR ALIGN=LEFT VALIGN=TOP>
+  <TD><b>Geometric invariant theory and quiver varieties</b></TD>
+  <TD><i>Graduate seminar</i></TD>
+  <TD><i>2014</i></TD>
+  <TD><i>University of Bonn</i></TD>
+  <TD><i>~30 hours</i></TD>
+</TR>
+<TR ALIGN=LEFT VALIGN=TOP>
+  <TD><b>Hopf Algebras and Quantum groups</b></TD>
+  <TD><i>Graduate class</i></TD>
+  <TD><i>2014</i></TD>
+  <TD><i>University of Cologne</i></TD>
+  <TD><i>~45 hours</i> + weekly tutorials</TD>
+</TR>
+<TR ALIGN=LEFT VALIGN=TOP>
+  <TD><b>Research seminar algebra</b></TD>
+  <TD><i>Graduate seminar</i></TD>
+  <TD><i>2013</i></TD>
+  <TD><i>University of Cologne</i></TD>
+  <TD><i>~30 hours</i></TD>
+</TR>
+<TR ALIGN=LEFT VALIGN=TOP>
+  <TD><b>Coxeter groups and Hecke algebras</b></TD>
+  <TD><i>Undergraduate class</i></TD>
+  <TD><i>2013</i></TD>
+  <TD><i>University of Cologne</i></TD>
+  <TD><i>~45 hours</i> + weekly tutorials</TD>
+</TR>
+<TR ALIGN=LEFT VALIGN=TOP>
+  <TD><b>Kac-Moody groups and flag varieties</b></TD>
+  <TD><i>Graduate seminar</i></TD>
+  <TD><i>2013</i></TD>
+  <TD><i>University of Cologne</i></TD>
+  <TD><i>~30 hours</i></TD>
+</TR>
+<TR ALIGN=LEFT VALIGN=TOP>
+  <TD><b>Koszul duality</b></TD>
+  <TD><i>Graduate seminar</i></TD>
+  <TD><i>2011</i></TD>
+  <TD><i>University of Bonn</i></TD>
+  <TD><i>~30 hours</i></TD>
+</TR>
+<TR ALIGN=LEFT VALIGN=TOP>
+  <TD><b>Flag varieties, Kac-Moody groups and representation theory</b></TD>
+  <TD><i>Graduate seminar</i></TD>
+  <TD><i>2009</i></TD>
+  <TD><i>University of Bonn</i></TD>
+  <TD><i>~30 hours</i></TD>
+</TR>
+<TR ALIGN=LEFT VALIGN=TOP>
+  <TD><b>Introduction to algebraic geometry and toric varieties</b></TD>
+  <TD><i>Undergraduate seminar</i></TD>
+  <TD><i>2008</i></TD>
+  <TD><i>University of Cologne</i></TD>
+  <TD><i>~30 hours</i></TD>
+</TR>
+<TR ALIGN=LEFT VALIGN=TOP>
+  <TD><b>Symmetries and ornaments</b></TD>
+  <TD><i>Undergraduate seminar</i></TD>
+  <TD><i>2008</i></TD>
+  <TD><i>University of Cologne</i></TD>
+  <TD><i>~30 hours</i></TD>
+</TR>
+<TR ALIGN=LEFT VALIGN=TOP>
+  <TD><b>Introduction to mathematics</b></TD>
+  <TD><i>Undergraduate class</i></TD>
+  <TD><i>2006</i></TD>
+  <TD><i>University of Cologne</i></TD>
+  <TD><i>~30 hours</i></TD>
+</TR>
+</TABLE>
   			</div>
 		</div>
 
