--- a/teaching.html
+++ b/teaching.html
@@ -59,12 +59,34 @@
   		</div>
 	</nav>
 
+	<p></p>
+	<p></p>
 	<div class="container">
 		<div class="card border-success">
 			<div class="card-header"><h3>University of Sydney</h3></div>
   			<div class="card-body">
 				<ul>
-					<li><b>Commutative algebra</b>, <i>Graduate class</i> for one semester in 2018 with 2 hours lecture per week</li>
+					<li><b>Quantum groups</b>, <i>Graduate class</i> ~30 hours of lecture in 2018</li>
+					<li><b>Commutative algebra</b>, <i>Graduate class</i> ~30 hours of lecture in 2018</li>
+					<li><b>Commutative algebra</b>, <i>Graduate class</i> ~30 hours of lecture in 2017</li>
+				</ul>
+  			</div>
+		</div>
+	</div>
+	<p></p>
+	<p></p>
+	<div class="container">
+		<div class="card border-success">
+			<div class="card-header"><h3>University of Cologne</h3></div>
+  			<div class="card-body">
+				<ul>
+					<li><b>Tropical geometry</b>, <i>Graduate class</i>, ~45 hours of lecture in 2016 with weekly marked exercises</li>
+					<li><b>Hopf Algebras and Quantum groups</b>, <i>Graduate class</i>, ~45 hours of lecture in 2014 with weekly marked exercises</li>
+					<li><b>Coxeter groups and Hecke algebras</b>, <i>Undergraduate class</i>, ~45 hours of lecture in 2013 with weekly marked exercises</li>
+					<li><b>Kac-Moody groups and flag varieties</b>, <i>Graduate seminar</i>, ~30 hours of seminar in 2013</li>
+					<li><b>Introduction to algebraic geometry and toric varieties</b>, <i>Undergraduate seminar</i>, ~30 hours of seminar in 2018</li>
+					<li><b>Symmetries and ornaments</b>, <i>Undergraduate seminar</i>, ~30 hours of seminar in 2018</li>
+					<li><b>Introduction to mathematics</b>, <i>Undergraduate class</i>, ~30 hours of lecture in 2006</li>
 				</ul>
   			</div>
 		</div>
@@ -76,34 +98,6 @@
 			<div class="card-header"><h3>Teaching</h3></div>
   			<div class="card-body">
 <TABLE id="t01" WIDTH="1000" >
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TH WIDTH="31%"><b>Course</b></TH>
-  <TH WIDTH="17%"><b>Type</b></TH>
-  <TH WIDTH="5%"><b>Semester</b></TH>
-  <TH WIDTH="17%"><b>University</b></TH>
-  <TH WIDTH="20%"><b>Length</b></TH>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Commutative algebra</b></TD>
-  <TD><i>Graduate class</i></TD>
-  <TD><i>2018</i></TD>
-  <TD><i>University of Sydney</i></TD>
-  <TD><i>~26 hours</i></TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Commutative algebra</b></TD>
-  <TD><i>Graduate class</i></TD>
-  <TD><i>2017</i></TD>
-  <TD><i>University of Sydney</i></TD>
-  <TD><i>~26 hours</i></TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Tropical geometry</b></TD>
-  <TD><i>Graduate class</i></TD>
-  <TD><i>2016</i></TD>
-  <TD><i>University of Cologne</i></TD>
-  <TD><i>~45 hours</i> + weekly tutorials</TD>
-</TR>
 <TR ALIGN=LEFT VALIGN=TOP>
   <TD><b>Categorification at roots of unity</b></TD>
   <TD><i>Graduate seminar</i></TD>
@@ -140,28 +134,7 @@
   <TD><i>~30 hours</i></TD>
 </TR>
 <TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Hopf Algebras and Quantum groups</b></TD>
-  <TD><i>Graduate class</i></TD>
-  <TD><i>2014</i></TD>
-  <TD><i>University of Cologne</i></TD>
-  <TD><i>~45 hours</i> + weekly tutorials</TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
   <TD><b>Research seminar algebra</b></TD>
-  <TD><i>Graduate seminar</i></TD>
-  <TD><i>2013</i></TD>
-  <TD><i>University of Cologne</i></TD>
-  <TD><i>~30 hours</i></TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Coxeter groups and Hecke algebras</b></TD>
-  <TD><i>Undergraduate class</i></TD>
-  <TD><i>2013</i></TD>
-  <TD><i>University of Cologne</i></TD>
-  <TD><i>~45 hours</i> + weekly tutorials</TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Kac-Moody groups and flag varieties</b></TD>
   <TD><i>Graduate seminar</i></TD>
   <TD><i>2013</i></TD>
   <TD><i>University of Cologne</i></TD>
@@ -179,27 +152,6 @@
   <TD><i>Graduate seminar</i></TD>
   <TD><i>2009</i></TD>
   <TD><i>University of Bonn</i></TD>
-  <TD><i>~30 hours</i></TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Introduction to algebraic geometry and toric varieties</b></TD>
-  <TD><i>Undergraduate seminar</i></TD>
-  <TD><i>2008</i></TD>
-  <TD><i>University of Cologne</i></TD>
-  <TD><i>~30 hours</i></TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Symmetries and ornaments</b></TD>
-  <TD><i>Undergraduate seminar</i></TD>
-  <TD><i>2008</i></TD>
-  <TD><i>University of Cologne</i></TD>
-  <TD><i>~30 hours</i></TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Introduction to mathematics</b></TD>
-  <TD><i>Undergraduate class</i></TD>
-  <TD><i>2006</i></TD>
-  <TD><i>University of Cologne</i></TD>
   <TD><i>~30 hours</i></TD>
 </TR>
 </TABLE>
